---
version: 0.19
date:    Sun Nov 19 16:41:26 PST 2006
changes:
- Fixed setting a hash value. Reported by Theo Petersen. Thanks.
- David added ability to compile path names by passing directory to recurse
- Allow TT2 compile time options to be specified on command line.
- Create runtime code from CLI script.
- Allow Jemplate objects to be created with runtime configs.
- Port some TT2 runtime options.
- Better doc

---
version: 0.18
date:    Wed Mar  8 02:06:47 PST 2006
changes:
- Made Test.Base stuff its own module. Now Jemplate relies on that module.
- Christian Hansen added a simple daemon for running tests.
- Cees Hek added all hash virtual methods (except `import` which caused
  major grief)
- Cees monkeyed around in the Stash lookup code
- Yann K implemented the `replace` filter
- Ingy made `foo.bar()` always call a method `bar`.
- Ingy completely refactored Test.Base and then proceeded to refactor the
  Jemplate test suite in kind.
- gugod pulled over some uri escaping code from Kwiki
- chansen tweaked the daemon to honor caching rules
- Cory Bennett fixed some bug having to do with a JavaScript String object.
- Cees fixed the defaults for the `indent` and `truncate` filters.
- Stephen Howard reported that Jemplate was not localising the stash for
  the INCLUDE directive, and he even supplied a patch, but Ingy had
  already made the fix.
- Ingy played with the Stash lookup code and hopefully got it just perfect.
- Ingy added support for the DEFAULT directive.
- Lots more tests in this release.

---
version: 0.17
date:    Tue Feb 28 22:44:04 PST 2006
changes:
- Fixed ajax callback bugs
- Fixed inserting result into a dom element in Safari
- Cory Bennett fixed Test.Harness on Konqueror
- Cory sorted keys in FOR i IN obj. This should give expected consistency to
  users.
- Cees Hek implemented all the string functions. With tests!!
- Cees added the truncate filter.
- Yann Kerhervé changed the position of arguments in filters