@@ -1,4 +1,3 @@
-
 no_index: 
   directory: 
     - inc
@@ -9,8 +8,6 @@ version: 0.19
 name: Jemplate
 author: "Ingy d\xC3\xB6t Net <ingy@cpan.org>"
 license: perl
-build_requires: 
-  Test::Base: 0.50
 requires: 
   perl: 5.6.1
   Template: 2.14
