@@ -20,9 +20,8 @@ x Option to bundle Jemplate.js runtime
 + Test DEBUG_UNDEF
 + Test subdir templates
 
-- Change list output
-
-- make manifest
++ Change list output
++ make manifest
 
 
 === This is a list of things for you to do. Feel free to do them or add to the
