@@ -1,3 +1,3 @@
 English: <! INCLUDE greeting/english !>
 
-Spanish: <! INCLUDE greeting/spanish !>
+Spanish: <! InCluDe greeting/spanish !>
